tests/ui/async-await/in-trait/return-type-suggestion.stderr
error[E0308]: mismatched types
  --> $DIR/return-type-suggestion.rs:6:9
   |
LL |         Ok(())
   |         ^^^^^^ expected `()`, found `Result<(), _>`
   |
   = note: expected unit type `()`
                   found enum `Result<(), _>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
