tests/ui/async-await/in-trait/return-type-suggestion.rs
//@ edition: 2021


trait A {
    async fn e() {
        Ok(())
        //~^ ERROR mismatched types
    }
}

fn main() {}
